new changes made

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
         "name": "John Doe",
         "jobTitle": "Full Stack Developer",
         "description": "Passionate full-stack developer specializing in modern web technologies",
-        "url": "https://johndoe-portfolio.example.com",
+        "url": "https://debasish-sai.github.io/native-pwa",
         "sameAs": [
             "https://linkedin.com/in/johndoe",
             "https://github.com/johndoe",
